Agregar funcionalidad de gestión de favoritos para usuarios: implementar métodos en UserService para añadir, eliminar y verificar productos favoritos. Actualizar User y Product para manejar la relación de favoritos. Modificar ProductCard y CategoryListAdmin en el frontend para permitir la interacción con favoritos y mejorar la experiencia del usuario al mostrar productos favoritos.